Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25497

Off-by-one (line) error when showing compiler output from Issues pane

XMLWordPrintable

    • All
    • 60a275ce6245c0d3ce71b2d63bbeefd879dfef9c (qt-creator/qt-creator/4.15)

      The following code snippet in main.cpp:

      int main()
      {
          foo();
          bar();
          return 0;
      } 

      leads to two compiler errors, which are correctly shown in the Issues pane. Jumping to the  editor line works correctly.

      However, jumping to the corresponding compile output with "Show Output" is always one line upwards (see screenshots).

      This is especially annoying for one-line compiler/linker errors, because a totally wrong output is selected.

        1. show-output-for-first-error.png
          194 kB
          André Hartmann
        2. show-output-for-second-error.png
          201 kB
          André Hartmann
        3. issues-pane-correct.png
          120 kB
          André Hartmann
        For Gerrit Dashboard: QTCREATORBUG-25497
        # Subject Branch Project Status CR V

            aha_1980 André Hartmann
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes