CompileOutputWindow: Fix creation of task positions

When jumping from the issues pane to the compile output,
the selected text was always starting and ending one line
earlier than expected.

Probably broken by 1c6e4fbd3.

Fixes: QTCREATORBUG-25497
Change-Id: Ia5b796f27faa91e45b10b945dbf6261f1dbce036
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>